@@ -1,7 +1,13 @@
 plugins {
-    // Apply the common convention plugin for shared build configuration between library and application projects.
     id 'eu.geekplace.beanstalk.java-common-conventions'
 
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+}
+
+tasks.withType(JavaExec) {
+	applicationDefaultJvmArgs += [
+		"--enable-preview"
+		// TODO: Use ENABLE_PREVIEW from e.g.beanstalk.java-common-conventions plugin.
+		// ENABLE_PREVIEW,
+	]
 }
